<?xml version="1.0"?>
<package>
  <name>agrotec_mrcnn</name>
  <version>1.0.0</version>
  <description>The ROS-powered Mask R-CNN implementation.</description>

  <maintainer email="akio.code@gmail.com">Akio Ochiai</maintainer>
  <maintainer email="illya.shvarov@gmail.com">Illia Shvarov</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/mask_rcnn_ros</url>

  <author email="illya.shvarov@gmail.com">Illia Shvarov</author>
  <author email="akio.code@gmail.com">Akio Ochiai</author>
  <author>Matterport, Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>vision_opencv</run_depend>
</package>
